--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,12 +12,12 @@
 
     <div class="score-board">
         <div id="user-label" class="badge">user</div>
-        <div id="computer-label" class="badge">comp</div>
-        <span id="user-score">0</span> : <span id="computer-score">0</span>
+        <div id="comp-label" class="badge">comp</div>
+        <span id="user-score">0</span> : <span id="comp-score">0</span>
     </div>
 
     <div class="result">
-        <p>Paper covers rock. You win!</p>
+        <p>Ready to Play?</p>
     </div>
 
     <div class="choices">
@@ -35,5 +33,6 @@
     </div>
 
     <p id="action-message">Make your move.</p>
+    <script src="app.js" charset="utf-8"></script>
 </body>
 </html>
