added html task form skeleton

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -8,6 +8,25 @@
     <title>Task List</title>
 </head>
 <body>
+    <header>
+        <h1>Task List</h1>
+        <form id="task-form">
+            <input type="text" id="task-input" placeholder="Type task here">
+            <input type="submit" id="task-submit" value="Add task">
+        </form>
+    </header>
     
+    <main>
+        <section class="task-list">
+            <h2>Tasks</h2>
+            <div id="task">
+                <div class="task">
+                    <div class="content">
+                        <input class="text" value="" type="text" readonly>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
