HTML skeleton finished

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -22,11 +22,16 @@
             <div id="task">
                 <div class="task">
                     <div class="content">
-                        <input class="text" value="" type="text" readonly>
+                        <input class="text" value="My task" type="text" readonly>
+                    </div>
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="delete">Delete</button>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
 </html>
