--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="task-list">
             <h2>Tasks</h2>
-            <div id="task">
+            <div id="tasks">
                 <div class="task">
                     <div class="content">
                         <input class="text" value="My task" type="text" readonly>
