--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -20,7 +20,7 @@
         <section class="task-list">
             <h2>Tasks</h2>
             <div id="tasks">
-                <div class="task">
+                <!-- <div class="task">
                     <div class="content">
                         <input class="text" value="My task" type="text" readonly>
                     </div>
@@ -28,7 +28,7 @@
                         <button class="edit">Edit</button>
                         <button class="delete">Delete</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
