--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -20,6 +20,7 @@
         <section class="task-list">
             <h2>Tasks</h2>
             <div id="tasks">
+                <!-- this html code below was created using JS -->
                 <!-- <div class="task">
                     <div class="content">
                         <input class="text" value="My task" type="text" readonly>
