--- a/single-page-app/frontend/index.html
+++ b/single-page-app/frontend/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Page App</title>
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
-    <nav class="class">
+    <nav class="nav">
         <!-- data-link attr: uses history api, push state method to navigate wo page refreshes -->
         <a href="/" class="nav__link" data-link>Dashboard</a>
         <a href="/posts" class="nav__link" data-link>Posts</a>
